added scoring logic for first player

--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@
 				<div class="grid__footer">
 					<div class="grid__footer__player1">
 						<p>Team A</p>
+						<hr />
+						<p id="score">100</p>
+						<div class="score-controls">
+							<button class="add">
+								<p>+</p>
+							</button>
+							<button class="minus">
+								<p>-</p>
+							</button>
+						</div>
 					</div>
 					<div class="grid__footer__player2">
 						<p>Team B</p>
