--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 					</table>
 				</div>
 				<div class="grid__footer">
-					<div class="player">
-						<p class="teamName">Team A</p>
-						<p class="score-controls">100</p>
+					<!-- <div class="player">
+						<p class="teamName" contenteditable="true">Team A</p>
+						<p class="score-controls" id="score">100</p>
 						<div>
 							<button class="add">
 								<p>+</p>
@@ -63,33 +63,10 @@
 								<p>-</p>
 							</button>
 						</div>
-					</div>
-					<div class="player"><p>B</p></div>
-					<div class="player"><p>C</p></div>
-					<div class="player"><p>D</p></div>
-
-					<!-- <div class="grid__footer__player1">
-						<p>Team A</p>
-						<hr />
-						<p id="score">100</p>
-						<div class="score-controls">
-							<button class="add">
-								<p>+</p>
-							</button>
-							<button class="minus">
-								<p>-</p>
-							</button>
-						</div>
-					</div>
-					<div class="grid__footer__player2">
-						<p>Team B</p>
-					</div>
-					<div class="grid__footer__player3">
-						<p>Team C</p>
-					</div>
-					<div class="grid__footer__player4">
-						<p>Team D</p>
 					</div> -->
+					<!-- <div class="player"><p>B</p></div>
+					<div class="player"><p>C</p></div>
+					<div class="player"><p>D</p></div> -->
 				</div>
 			</div>
 		</main>
