generate quiz programmatically

--- a/index.html
+++ b/index.html
@@ -18,7 +18,19 @@
 			<div class="grid">
 				<div class="grid__header"><h1>Play Jeopardy!</h1></div>
 				<div class="grid__main">
-					<table>
+					<!-- <div class="modal-container">
+						<div class="modal">
+							<p>
+								Lorem ipsum dolor sit amet consectetur
+								adipisicing elit. Accusamus ipsum, optio aliquid
+								accusantium aut similique quia id molestias
+								nulla, esse pariatur possimus rem dolore quis
+								illo autem aspernatur cupiditate tenetur?
+							</p>
+							<button id="close-question-modal">Close</button>
+						</div>
+					</div> -->
+					<!-- <table>
 						<tr>
 							<th>Current Events</th>
 							<th>History</th>
@@ -49,7 +61,7 @@
 							<td>400</td>
 							<td>400</td>
 						</tr>
-					</table>
+					</table> -->
 				</div>
 				<div class="grid__footer">
 					<!-- <div class="player">
