can display questions and answers

--- a/index.html
+++ b/index.html
@@ -17,19 +17,21 @@
 		<main>
 			<div class="grid">
 				<div class="grid__header"><h1>Play Jeopardy!</h1></div>
+				<div class="grid__modal" id="modal-container">
+					<div class="modal">
+						<p id="question">
+							Lorem ipsum dolor sit amet consectetur adipisicing
+							elit. Accusamus ipsum, optio aliquid accusantium aut
+							similique quia id molestias nulla, esse pariatur
+							possimus rem dolore quis illo autem aspernatur
+							cupiditate tenetur?
+						</p>
+						<button id="reveal-answer">Reveal answer</button>
+						<button id="close-question-modal">Close</button>
+						<p id="answer" class="hidden">blah blah blah</p>
+					</div>
+				</div>
 				<div class="grid__main">
-					<!-- <div class="modal-container">
-						<div class="modal">
-							<p>
-								Lorem ipsum dolor sit amet consectetur
-								adipisicing elit. Accusamus ipsum, optio aliquid
-								accusantium aut similique quia id molestias
-								nulla, esse pariatur possimus rem dolore quis
-								illo autem aspernatur cupiditate tenetur?
-							</p>
-							<button id="close-question-modal">Close</button>
-						</div>
-					</div> -->
 					<!-- <table>
 						<tr>
 							<th>Current Events</th>
