--- a/index.html
+++ b/index.html
@@ -19,16 +19,10 @@
 				<div class="grid__header"><h1>Play Jeopardy!</h1></div>
 				<div class="grid__modal" id="modal-container">
 					<div class="modal">
-						<p id="question">
-							Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Accusamus ipsum, optio aliquid accusantium aut
-							similique quia id molestias nulla, esse pariatur
-							possimus rem dolore quis illo autem aspernatur
-							cupiditate tenetur?
-						</p>
-						<button id="reveal-answer">Reveal answer</button>
-						<button id="close-question-modal">Close</button>
-						<p id="answer" class="hidden">blah blah blah</p>
+						<p id="question"></p>
+						<button id="reveal-answer"></button>
+						<button id="close-question-modal"></button>
+						<p id="answer" class="hidden"></p>
 					</div>
 				</div>
 				<div class="grid__main">
