--- a/index.html
+++ b/index.html
@@ -20,8 +20,12 @@
 				<div class="grid__modal" id="modal-container">
 					<div class="modal">
 						<p id="question"></p>
-						<button id="reveal-answer"></button>
-						<button id="close-question-modal"></button>
+						<button id="reveal-answer" role="button">
+							Reveal answer
+						</button>
+						<button id="close-question-modal" role="button">
+							Close
+						</button>
 						<p id="answer" class="hidden"></p>
 					</div>
 				</div>
