add/remove player logic and more styling

--- a/index.html
+++ b/index.html
@@ -63,23 +63,8 @@
 						</tr>
 					</table> -->
 				</div>
-				<div class="grid__footer">
-					<!-- <div class="player">
-						<p class="teamName" contenteditable="true">Team A</p>
-						<p class="score-controls" id="score">100</p>
-						<div>
-							<button class="add">
-								<p>+</p>
-							</button>
-							<button class="minus">
-								<p>-</p>
-							</button>
-						</div>
-					</div> -->
-					<!-- <div class="player"><p>B</p></div>
-					<div class="player"><p>C</p></div>
-					<div class="player"><p>D</p></div> -->
-				</div>
+				<div class="grid__footer"></div>
+				<div class="grid__footer-side"></div>
 			</div>
 		</main>
 	</body>
